# everyrow-sdk

./: .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  AUTH_BYPASS_AUDIT.md  CITATION.cff  NETWORK_POLICY_AUDIT.md  README.md  SSRF_AUDIT_REPORT.md  TESTING.md  benchmark_csv_upload.py  dev-claude.sh  gemini-extension.json  generate_openapi.sh  lefthook.yml  openapi-python-client.yaml  pyproject.toml  skills  thematic_screen_results_20260114_172950.csv
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
case_studies/active_learning/: README.md  active_learning_tutorial.ipynb  dataset_config.py  experiment_runner.py  experiment_types.py  model.py  pyproject.toml  utils.py  view_results.py
dagster-everyrow/: README.md  pyproject.toml
docs/: AGENT.md  DEDUPE.md  MERGE.md  RANK.md  SCREEN.md  SEO_CASE_STUDIES_PLAN.md  active-learning-llm-oracle.md  add-column-web-lookup.md  add-column-web-lookup.mdx  api.md  case-studies.md  chaining-operations.mdx  classify-dataframe-rows-llm.md  classify-dataframe-rows-llm.mdx  claude-code-integration.md  deduplicate-training-data-ml.md  entity-resolution-python.md  filter-dataframe-with-llm.md  filter-dataframe-with-llm.mdx  fuzzy-join-without-keys.md  getting-started.md  guides.md  installation.md  installation.mdx  llm-classification-dataframe.md  mcp-server.md  mcp-server.mdx  natural-language-filter-dataframe.md  notebooks.md  progress-monitoring.md  progress-monitoring.mdx  rank-by-external-metric.md  (+6 more)
docs-site/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
(+272 files in other folders)
